fix: Remove shadow avatar from behind preview

--- a/src/components/start/Start.css
+++ b/src/components/start/Start.css
@@ -56,20 +56,6 @@
   display: none;
 }
 
-.start-wearable-preview .wearable-default-img {
-  filter: blur(5px);
-  display: flex;
-  align-self: center;
-  max-height: 660px;
-  opacity: 0;
-  position: absolute;
-  transition: ease-out 2s;
-}
-
-.start-wearable-preview.loading .wearable-default-img {
-  opacity: 0.9;
-}
-
 .explorer-website-start .start-links {
   display: flex;
   flex-direction: column;
